sass/custom/objects/_nav.scss
/*------------------------------------*\
    $NAVIGATION
\*------------------------------------*/
/**
 * placeholder for button that toggles nav
 */
%menu-toggle {
  display: none;

  @include media-query(palm) {
    display: inline-block;
  }
}

/**
 * placeholder for menu container used to hide menus on mobile / tablet
 */
%menu-container {
  @include media-query(palm) {
    overflow: hidden;
  }
}

.menu {
  @extend %list--reset;

  /**
   * animate menu for mobiles and tablets
   */
  @include media-query(palm) {
    @include transition(all 250ms ease-in-out);
    @include transform(translate3d(0,0,0));

    %menu-container > & {
      max-height: 0;
    }

    %menu-container.is-open > & {
      max-height: 50em;
    }
  }
}

  .menu__item {
    position: relative;
    display: inline-block;

    @include media-query(palm) {
      display: block;
    }

    & a {
      display: block;
      color: $clr-primary;
      padding: .5em 1em;

      &:hover,
      &:focus {

      }

      &:active {

      }
    }
  }

  .menu__item--current {
    & > a {
      &,
      &:hover,
			&:focus,
      &:active {
        cursor: default;
      }
    }
  }

    .menu__sub {
      position: absolute;
      background-color: #fff;
      border: 1px solid $base-ui-color;
			opacity: 0;
      z-index: 0;
			@include transition(opacity 150ms ease-in-out);

			.ie8 & {
				display: none;
			}

      .menu__item a:hover + &,
			.menu__item a:focus + &,
      &:hover,
			&:focus {
				opacity: 1;
				z-index: 100;

				.ie8 & {
					display: block;
				}
      }

      @include media-query(palm) {
        display: block;
        position: relative;
        border: 0;
      }

      & a {
        min-width: 225px;
        padding-left: 1em;
        white-space: nowrap;

        @include media-query(palm) {
          white-space: normal;
          min-width: auto;
          padding-left: 1.5em;
        }
      }
    }

      .menu__sub .menu__sub {
        top: 0;
        left: 100%;

        @include media-query(palm) {
          top: auto;
          left: auto;
        }
      }

        .menu__sub .menu__sub a {
          @include media-query(palm) {
            padding-left: 2.5em;
          }
        }

